# cursorVDClass2025

./: customrule.md  vd.md
CursorVD(추가자료)/: cursor-learning-slides.html  prompt.md
CursorVD(추가자료)/Cursor Rule/: HowtoWriteCursorrule.md  kotlinrule.md  kotlinrulemxtemplate.md  userrule.md
CursorVD(추가자료)/PRD/: prd example.md
CursorVD(추가자료)/md_file/: live.md  mission-json.md  test.md
cursor-cpp-training/: README.md
cursor-cpp-training/.cursor/rules/: cpp17-coding-standards.mdc  naming-conventions.mdc  project-structure.mdc  testing-guidelines.mdc
cursor-cpp-training/01-legacy-c/: CMakeLists.txt  HTMLReporter.cpp  HTMLReporter.hpp  LogEntry.hpp  LogFileReader.cpp  LogFileReader.hpp  LogFileWatcher.cpp  LogFileWatcher.hpp  LogParser.cpp  LogParser.hpp  LogStats.cpp  LogStats.hpp  Makefile  README_LIVE_MONITOR.md  enhanced_report.html  log_analyzer  log_analyzer.c  main.cpp  main_live.cpp  report.html  simple_log_monitor.cpp  test_monitor.sh
cursor-cpp-training/01-legacy-c/tests/: test_integration.cpp  test_log_file_reader.cpp  test_log_parser.cpp  test_log_stats.cpp  test_main.cpp  test_main_functionality.cpp
cursor-cpp-training/02-cpp17-refactored/: CMakeLists.txt  LogStats.cpp  LogStats.hpp  main.cpp
cursor-cpp-training/03-with-tests/: CMakeLists.txt  LogFileReader.cpp  LogFileReader.hpp  LogParser.cpp  LogParser.hpp  LogStats.cpp  LogStats.hpp  dashboard.html  main.cpp  results.json
cursor-cpp-training/03-with-tests/tests/: test_log_file_reader.cpp  test_log_parser.cpp  test_log_stats.cpp  test_main.cpp
cursor-cpp-training/docs/: 1단계(2,3교시)-AI와_대화하기.md  2단계(4,5교시)-작업지시서_만들기.md  3단계(6,7교시)-AI로_계획하고_확장하기.md  class_diagram.puml
require/: class4.md  live.md  test.md
